# win_agent

./: CMakeLists.txt  README.md  docker-compose.yml  vcpkg.json
src/: certificate.h  kafka_helper.h  main.cpp  multicast_search.h  pc_info.h  ports_info.h  process_info.h
